--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from 'astro:content'
 
-import BlogHero from '@/components/blog/Hero.astro'
-import TOC from '@/components/blog/TOC.astro'
+import BlogHero from '@/components/projects/Hero.astro'
+import TOC from '@/components/projects/TOC.astro'
 import Button from '@/components/Button.astro'
 
 import PageLayout from './BaseLayout.astro'
@@ -24,7 +24,7 @@ const { headings } = await post.render()
 
 <PageLayout meta={{ articleDate, description, ogImage: socialImage, title }}>
 	<div class='w-full'>
-		<Button title='Back' href='/blog' style='button'>
+		<Button title='Back' href='/projects' style='button'>
 			<svg
 				xmlns='http://www.w3.org/2000/svg'
 				width='14'
