add icons and tools to tools page

--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -5,22 +5,64 @@ import Button from '@/components/Button.astro'
 
 const DESIGN = [
 	{
-		name: 'Figma',
-		description: 'Design Tool',
-		href: 'https://www.figma.com/',
-		iconPath: 'figma',
+		name: 'Unreal Engine',
+		description: 'Game Engine',
+		href: 'https://www.unrealengine.com',
+		iconPath: 'unrealengine',
 		iconBgColour: '#000001'
+	},
+	{
+		name: 'Blender',
+		description: '3D Modelling',
+		href: 'https://www.blender.org/',
+		iconPath: 'blender',
+		iconBgColour: '#F5792A'
+	},
+	{
+		name: '3ds Max',
+		description: '3D Modelling',
+		href: 'https://www.autodesk.com/products/3ds-max/overview',
+		iconPath: '3dsmax',
+		iconBgColour: '#FF6F00'
+	},
+	{
+		name: 'Plasticity',
+		description: 'CAD Modelling',
+		href: 'https://www.plasticity.xyz/',
+		iconPath: 'plasticity',
+		iconBgColour: '#FF6F00'
+	},
+	{
+		name: 'Rhino3D',
+		description: 'CAD Modelling',
+		href: 'https://www.rhino3d.com/',
+		iconPath: 'rhino3d',
+		iconBgColour: '#FF6F00'
+	},
+	{
+		name: 'Adobe Photoshop',
+		description: 'Image Editing Tool',
+		href: 'https://www.adobe.com/products/photoshop.html',
+		iconPath: 'photoshop',
+		iconBgColour: '#001D26'
+	},
+	{
+		name: 'Affinity Photo',
+		description: 'Image Editing Tool',
+		href: 'https://affinity.serif.com/en-gb/photo/',
+		iconPath: 'affinityphoto',
+		iconBgColour: '#1B1B1B'
+	},
+	{
+		name: 'Davinci Resolve',
+		description: 'Video Editing Tool',
+		href: 'https://www.blackmagicdesign.com/products/davinciresolve/',
+		iconPath: 'davinciresolve',
+		iconBgColour: '#1F1F1F'
 	}
 ]
 
 const PRODUCTIVITY = [
-	{
-		name: 'Arc',
-		description: 'Browser',
-		href: 'https://arc.net/',
-		iconPath: 'arc',
-		iconBgColour: '#414350'
-	},
 	{
 		name: 'Notion',
 		description: 'Note Taking',
@@ -34,6 +76,13 @@ const PRODUCTIVITY = [
 		href: 'https://obsidian.md/',
 		iconPath: 'obsidian',
 		iconBgColour: '#7A3EE8'
+	},
+	{
+		name: 'PureRef',
+		description: 'Image Reference Management',
+		href: 'https://www.pureref.com/',
+		iconPath: 'pureref',
+		iconBgColour: '#1A1A1A'
 	}
 ]
 
@@ -44,6 +93,34 @@ const DEVELOPMENT = [
 		href: 'https://code.visualstudio.com/',
 		iconPath: 'vscode',
 		iconBgColour: '#2C2C32'
+	},
+	{
+		name: 'Visual Studio',
+		description: 'IDE',
+		href: 'https://visualstudio.microsoft.com/',
+		iconPath: 'visualstudio',
+		iconBgColour: '#5C2D91'
+	},
+	{
+		name: 'git',
+		description: 'Version Control',
+		href: 'https://git-scm.com/',
+		iconPath: 'git',
+		iconBgColour: '#F05032'
+	},
+	{
+		name: 'GitHub',
+		description: 'Version Control',
+		href: 'https://www.github.com/',
+		iconPath: 'github',
+		iconBgColour: '#181717'
+	},
+	{
+		name: 'GitHub Copilot',
+		description: 'AI',
+		href: 'https://copilot.github.com/',
+		iconPath: 'githubcopilot',
+		iconBgColour: '#181717'
 	},
 	{
 		name: 'ChatGPT',
