--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -102,7 +102,7 @@ const DEVELOPMENT = [
 		iconBgColour: '#5C2D91'
 	},
 	{
-		name: 'git',
+		name: 'Git',
 		description: 'Version Control',
 		href: 'https://git-scm.com/',
 		iconPath: 'git',
